# multi-task-gradient-boosting

./: .gitignore  Booster.cpp  Booster.h  CMakeLists.txt  Dataset.cpp  Dataset.h  LinearLoss.cpp  LinearLoss.h  Loss.h  ModelSelection.cpp  ModelSelection.h  MultiTaskUpdater.cpp  MultiTaskUpdater.h  Node.cpp  Node.h  README.md  Random.h  SingleTaskUpdater.cpp  SingleTaskUpdater.h  ThreadPool.h  Updater.h  error.h  main.cpp  tree.cpp  tree.h  utils.h
MALSAR_experiment/MALSAR/examples/: example_CMTL.m  example_Dirty.m  example_Lasso.m  example_Trace.m  example_rMTFL.m
VSTG-MTL_experiment/VSTG-MTL/: L2_Newton_logistic.m  Loss_logistic.m  VSTG_MTL_logistic.m  VSTG_MTL_regress.m  demo.m  ksupport_FISTA_logistic.m  ksupport_FISTA_regress.m  norm_overlap.m  prox_L11norm.m  prox_L1infnorm.m  update_MTL_U_ADMM_logistic.m  update_MTL_U_ADMM_regress.m
data/: generate_exp_data.m
data/sarcos/: sub_sarcos.csv
data/sarcos_mat/: sarcos_re10.mat  sarcos_re2.mat  sarcos_re4.mat
data/school/: school_test_re1.csv  school_test_re10.csv  school_test_re2.csv  school_test_re3.csv  school_test_re4.csv  school_test_re5.csv  school_test_re6.csv  school_test_re7.csv  school_test_re8.csv  school_test_re9.csv  school_train_re1.csv  school_train_re10.csv  school_train_re2.csv  school_train_re3.csv  school_train_re4.csv  school_train_re5.csv  school_train_re6.csv  school_train_re7.csv  school_train_re8.csv  school_train_re9.csv
data/school_mat/: school_re4.mat  school_re8.mat
lightgbm_experiment/: TestLightgbm.py  data_transformer.py
lightgbm_experiment/data/: school.csv
(+24 files in other folders)
